fixed margins on mobile

--- a/css/simpleGridTemplate.css
+++ b/css/simpleGridTemplate.css
@@ -249,7 +249,7 @@ footer {
 	margin-top: 0px;
 }
 .thumbnail {
-	width: 100%;
+    width: 98%;
 }
 .text_column {
 	padding-left: 20px;
